<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".RadiationWarning"
    tools:showIn="@layout/activity_radiation_warning">

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:includeFontPadding="false"
        android:text="@string/text_warning"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="34pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAuthorizedPersonnelOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:includeFontPadding="false"
        android:text="@string/equipment_operated_by_authorized_personnel"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWarning" />

    <ImageView
        android:id="@+id/ivRadiationHazardWarning"
        android:layout_width="100dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAuthorizedPersonnelOnly"
        app:srcCompat="@drawable/ic_radiation_hazard_warning" />

    <TextView
        android:id="@+id/tvDeviceProducesIonizing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/this_device_produces_ionizing"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/black"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRadiationHazardWarning" />

    <TextView
        android:id="@+id/tvDoNotExposeAnyPart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/do_not_expose_any_part"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/black"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeviceProducesIonizing" />

    <ImageView
        android:id="@+id/ivLaserWarning"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivEyeLaserWarning"
        app:layout_constraintTop_toBottomOf="@id/tvDoNotExposeAnyPart"
        app:srcCompat="@drawable/ic_laser_symbol" />

    <ImageView
        android:id="@+id/ivEyeLaserWarning"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLaserWarning"
        app:layout_constraintTop_toBottomOf="@id/tvDoNotExposeAnyPart"
        app:srcCompat="@drawable/ic_laser_eye_warning" />

    <TextView
        android:id="@+id/tvContainsClass2Laser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:text="@string/this_device_contains_class2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/black"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLaserWarning" />

    <TextView
        android:id="@+id/tvByClickingAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:text="@string/by_clicking_accept"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/black"
        android:textSize="6pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnDecline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDecline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/rad_decline_button_default_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewSeparator"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="5dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnDecline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDecline" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rad_accept_button_default_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewSeparator"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>